/*
 * $Id: ChangeLog,v 1.18 2005-10-13 14:40:09 declan2005 Exp $
*/
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-13 9:37 UTC-0500 Ciro Vargas C. <sistemascvc@softhome.net>
    * source/h_controlmisc.prg
      optimize inputwindow ok and cancel.

2005-10-13 01:34 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_progressmeter.prg
    ! Fixed "numeric string" change.

2005-10-13 01:01 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_menu.prg
    ! Fixed silly typo creating a main menu.

2005-10-12 17:37 UTC-0500 Ciro Vargas C. <sistemascvc@softhome.net>
    * source/h_windows.prg
      upgrade print method  (bringing window to top)
    * samples/oohg/hello.prg
      added bar graph print example.

2005-10-11 00:43 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    * Removed "winprint.ch" include (for avoid warnings).
    * Moved ::Print() method from TForm to TWindow class.
      Minor formating and some code cleanup.

  * source/h_controlmisc.prg
  * source/h_windows.prg
    * _OOHG_GlobalRTL() added. Forces RTL on all forms and
      controls creation. Contributed by Ehab Ouf.

  * include/i_menu.ch
  * source/h_menu.prg
    ! Fixed CHECKED clause in declaration.
    * Added DISABLED clause.

  + samples/oohg/rtl.prg
    + RTL functionality demo.

  * source/winprint.prg
    * Uncommented multi-language texts.

2005-10-09 22:30 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * samples/oohg/hello.prg
    * Small adjustments.

  * source/h_windows.prg
    + Added ::Action property in TWindow class.

2005-10-09 19:31 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    * Fixed typo in __XHARBOR__

  * include/i_lang.ch
  * source/c_windows.c
  * source/h_windows.prg
    + Now it's possible to change RTL functionality at runtime.